<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_theme"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/txvLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hi_please_login"
        android:layout_marginStart="32dp"
        android:layout_marginTop="60dp"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:orientation="vertical"
        android:padding="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txvLogin">

        <TextView
            android:id="@+id/txvUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/edtUserName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textSize="18sp"
            android:padding="12dp"
            android:layout_marginTop="12dp"
            android:ems="10"
            android:textColor="@color/gray"
            android:background="@drawable/edit_text_background"
            android:inputType="text"
            android:drawableLeft="@drawable/baseline_person_24"
            android:hint="  Enter your username" />

        <TextView
            android:id="@+id/txvPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Password"
            android:layout_marginTop="32dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textSize="18sp"
            android:padding="12dp"
            android:layout_marginTop="12dp"
            android:ems="10"
            android:textColor="@color/gray"
            android:drawableLeft="@drawable/baseline_password_24"
            android:background="@drawable/edit_text_background"
            android:inputType="textPassword"
            android:hint="   Enter your password" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/button_background"
            style="@android:style/Widget.Button"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/login"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/txvForgotPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password_or_username"
            android:layout_marginTop="32dp"
            android:paddingLeft="80dp"
            android:textColor="@color/white" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSignuP"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/button_background"
            style="@android:style/Widget.Button"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/sign_up"
            android:textSize="20sp"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>